Fixed date of birth wrapping down in list page

--- a/app/assets/stylesheets/interns.scss
+++ b/app/assets/stylesheets/interns.scss
@@ -33,12 +33,14 @@
     td {
       padding-top: 15px;
       padding-bottom: 15px;
+      white-space: nowrap;
 
       &.name {
         .sub_names {
           padding-top: 5px;
           font-size: 16px;
           color: $secondary-color-3;
+          white-space: normal;
         }
       }
 
